--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SIGFinder - Visualizar Cat·logo</title>
+    <title>SIGFinder - Visualizar Cat√°logo</title>
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -28,14 +28,14 @@
             <a href="#" class="brand-logo center">SIGFinder</a>
             <div class="col s12 hide-on-med-and-down" style="margin-left: 20px">
                 <a href="/index.html" class="breadcrumb waves-light">Home</a>
-                <a href="#!" class="breadcrumb waves-light">Visualizar Cat·logo</a>
+                <a href="#!" class="breadcrumb waves-light">Visualizar Cat√°logo</a>
             </div>
         </div>
     </nav>
 
     <ul id="slide-out" class="side-nav fixed mySideNavBar">
 
-        <li><a href="#!">InformaÁıes</a></li>
+        <li><a href="#!">Informa√ß√µes</a></li>
         <li>
             <div class="divider"></div>
         </li>
@@ -50,21 +50,21 @@
             </div>
             <div id="parentDiv" class="input-field col s12">
                 <textarea disabled placeholder="" id="description_catalog" type="text"> </textarea>
-                <label for="description_catalog">Descricao</label>
+                <label for="description_catalog">Descri√ß√£o</label>
             </div>
 
             <div id="parentDiv" class="input-field col s12">
                 <input disabled placeholder="" id="appDomain_catalog" type="text">
-                <label for="appDomain_catalog">DomÌnios de AplicaÁ„o</label>
+                <label for="appDomain_catalog">Dom√≠nios de Aplica√ß√£o</label>
             </div>
 
             <div id="parentDiv" class="input-field col s12">
                 <input disabled placeholder="" id="areas_catalog" type="text">
-                <label for="areas_catalog">¡reas</label>
+                <label for="areas_catalog">√Åreas</label>
             </div>
             <div id="parentDiv" class="input-field col s12">
                 <input disabled placeholder="" id="reference_catalog" type="text">
-                <label for="reference_catalog">ReferÍncia</label>
+                <label for="reference_catalog">Refer√™ncia</label>
             </div>
         </div>
     </ul>
@@ -91,7 +91,7 @@
                     if (catalog !== null) {
                         fillFieldsCatalog(catalog);
                     } else {
-                        Materialize.toast("Nenhum cat·logo encontrado. Verifique sua string de busca e tente novamente", 3000, "red");
+                        Materialize.toast("Nenhum cat√°logo encontrado. Verifique sua string de busca e tente novamente", 3000, "red");
                     }
 //add info do catalogo nos campos
                 }
