--- a/pages/new_sig.html
+++ b/pages/new_sig.html
@@ -207,12 +207,14 @@
             <i class="large material-icons">add</i>
         </a>
         <ul>
-            <!-- Modal Trigger -->
+            <!-- Modal Trigger 
             <li>
                 <a class="btn-floating blue waves-effect waves-light btn modal-trigger" href="#modalCatalog">
                     <i class="material-icons">cloud_done</i>
                 </a>
             </li>
+
+            -->
             <li>
                 <a class="btn-floating red darken-1 btn modal-trigger" href="#modal1">
                     <i class="material-icons">delete</i>
