Server ip was changed - testing

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       let searchText = document.getElementById("inputSearchText").value;
 
       let xhttp = new XMLHttpRequest();
-      let url = "http://localhost:8080/catalogs";
+      let url = "http://192.168.1.7:8080/catalogs";
 
       xhttp.onreadystatechange = function () {
         if (xhttp.readyState == 4) {
