--- a/pages/new_sig.html
+++ b/pages/new_sig.html
@@ -426,7 +426,7 @@
 
         function sendNewCatalog(catalog) {
 
-            let url = "http://localhost:8080/catalogs"
+            let url = "http://192.168.1.7:8080/catalogs"
             let xhttp = new XMLHttpRequest();
 
             catalog = JSON.stringify(catalog);
