--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -83,7 +83,7 @@
 
             let xhttp = new XMLHttpRequest();
 
-            let url = "http://localhost:8080/catalogs/2/catalog";
+            let url = "http://192.168.1.7:8080/catalogs/2/catalog";
 
             xhttp.onreadystatechange = function () {
                 if (xhttp.readyState == 4) {
