New commit with some bugfixes and new features. For more details, please, check which issues were closed until this date in GitHub.

--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -25,7 +25,7 @@
 
     <nav>
         <div class="nav-wrapper indigo darken-1">
-            <a href="#" class="brand-logo center">SIGHub</a>
+            <a href="/index.html" class="brand-logo center">SIGHub</a>
             <div class="col s12 hide-on-med-and-down" style="margin-left: 20px">
                 <a href="/index.html" class="breadcrumb waves-light">Home</a>
                 <a href="#!" class="breadcrumb waves-light">View Catalog</a>
