--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="container background">    
     <div class="content" style="opacity: 1 !important;"> 
       <h5><strong>Search in our base catalogs that you want.</strong></h5>
-      <!--<h5><strong>Spare time and effort creating your own catalog.</strong></h5>-->
+      <h6 style="color:black;"><strong>Spare time and effort creating your own catalog.</strong></h6>
       <div class="row" style="width: 50vw;">
         <form class="col s12">
           <div class="row">
@@ -40,7 +40,6 @@
                 type="text" class="validate">
               <label for="search" style="color:black">Search Catalogs</label>
             </div>
-
             <a id="btSearchCatalogs" class="waves-effect waves-light blue btn">Search</a>
           </div>
         </form>
